--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Latex to Markdown</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    
+    <meta name="description" content="Convert your latex formula in image ready to be embeded in your markdown.">
     <!--
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
