--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Latex to Markdown</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     
-    <meta name="description" content="Convert your latex formula in image ready to be embeded in your markdown.">
+    <meta name="title" content="Online converter - Latex math notation to Markdown">
+    <meta name="description" content="Convert online your latex mathematical notation formulae into images ready to be embeded in your markdown.">
     <!--
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
