--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         html,
         body {
             height: 100%;
+            margin: 0px;
         }
 
         textarea {
@@ -28,10 +29,13 @@
 </head>
 
 <body>
+    <h1>Latex</h1>
     <textarea id="latex" rows="5"
         cols="33">\mathcal{W}(A,f) = (T,\bar{f}) \\ \therefore \mathcal{W}(A,f) = (T,\bar{f})</textarea>
+    <h1>Markdown</h1>
     <textarea id="md" rows="5" cols="33"></textarea>
     <br>
+    <h1>Render</h1>
     <img src="">
     <script>
         const baseUrl = `https://latex.codecogs.com/gif.latex?`;
