--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Latex to Markdown</title>
+    <title>Latex to Markdown - Online Converter & Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <meta name="title" content="Online Converter & Editor - Latex math notation to Markdown">
+    <meta name="title" content="Latex to Markdown - Online Converter & Editor">
     <meta name="description"
         content="Convert & Edit online your latex mathematical notation formulae into images ready to be embeded in your markdown.">
     <!--
